--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -44,6 +44,7 @@
     <link rel="stylesheet" href="/assets/website/fonts/v2ray_node/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="/assets/website/css/v2ray_node/aos.css">
     <link rel="stylesheet" href="/assets/website/css/v2ray_node/style.css">
+    <link rel="stylesheet" href="/assets/website/css/G.css" />
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7H6DT73WHK"></script>
 <script>
@@ -106,6 +107,45 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-11">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-11-node-share-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/23719af02f410bf11c49229669ae7202.webp" alt="「4月11日」最高速度18.4M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-11-node-share-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月11日」最高速度18.4M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了欧洲、美国、韩国、新加坡、日本、加拿大、香港等地区,最高速度可达18.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-10">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-10-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/050eeaeae15c4f80c45d1b2f1bf69e02.webp" alt="「4月10日」最高速度19.5M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-10-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月10日」最高速度19.5M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了香港、新加坡、美国、加拿大、欧洲、日本、韩国等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-09">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-9-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/823330949e90bc030d363139bfc4db3d.webp" alt="「4月9日」最高速度20M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-9-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月9日」最高速度20M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了美国、香港、新加坡、日本、韩国、加拿大、欧洲等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2025-04-08">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-4-8-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -197,47 +237,8 @@
                                     <p>这一次的节点更新覆盖了韩国、香港、欧洲、美国、日本、加拿大、新加坡等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-04-01">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-4-1-node-share-links.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/d21208fec1e7d0709067a1f22cc3ab5b.webp" alt="「4月1日」最高速度21.1M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-4-1-node-share-links.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月1日」最高速度21.1M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了日本、欧洲、新加坡、美国、韩国、加拿大、香港等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-03-31">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-3-31-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/cc523ed9277a0375a6331d5674ef34dc.webp" alt="「3月31日」最高速度21.3M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-3-31-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月31日」最高速度21.3M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了韩国、新加坡、香港、欧洲、美国、加拿大、日本等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-03-30">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-3-30-free-node-subscribe.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/610552e86a81521a4f6a2a8194cb9de6.webp" alt="「3月30日」最高速度21.8M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-3-30-free-node-subscribe.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月30日」最高速度21.8M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了日本、美国、新加坡、香港、加拿大、欧洲、韩国等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
-                            <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>                        </div>
+                            <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>                        </div>
                     </div>
                     <div class="col-md-3">
                         <div class="panel panel-default">
@@ -246,16 +247,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-95772.htm" title="成都市宠物狗领养平台官网电话（成都宠物狗领养吧）">成都市宠物狗领养平台官网电话（成都宠物狗领养吧）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-10-free-node-subscribe-links.htm" title="「3月10日」最高速度18.6M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「3月10日」最高速度18.6M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-16-free-node-subscribe.htm" title="「3月16日」最高速度19.8M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「3月16日」最高速度19.8M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-76392.htm" title="北京宠物医院价格表（北京宠物医院价格表图片）">北京宠物医院价格表（北京宠物医院价格表图片）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-13-free-v2ray.htm" title="「3月13日」最高速度21.4M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「3月13日」最高速度21.4M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-25-free-subscribe-node.htm" title="「3月25日」最高速度20.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「3月25日」最高速度20.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-6-free-subscribe-node.htm" title="「3月6日」最高速度20.4M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「3月6日」最高速度20.4M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-95773.htm" title="猫三联要隔多久打一针（猫三联要隔多久打一针才有效）">猫三联要隔多久打一针（猫三联要隔多久打一针才有效）</a></li>
                         <li class="py-2"><a href="/news/article-80475.htm" title="FP-growth算法以及代码实现">FP-growth算法以及代码实现</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-9-free-node-subscribe-links.htm" title="「4月9日」最高速度20M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「4月9日」最高速度20M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-78430.htm" title="养土狗的方法与技术有哪些视频讲解（养土狗技巧）">养土狗的方法与技术有哪些视频讲解（养土狗技巧）</a></li>
-                        <li class="py-2"><a href="/news/article-79101.htm" title="宠物猫疫苗接种时间（宠物猫疫苗有效期多久）">宠物猫疫苗接种时间（宠物猫疫苗有效期多久）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-19-node-share.htm" title="「3月19日」最高速度21.5M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「3月19日」最高速度21.5M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-83300.htm" title="力狼狗粮客服电话（力狼狗粮厂家电话）">力狼狗粮客服电话（力狼狗粮厂家电话）</a></li>
-                        <li class="py-2"><a href="/news/article-97187.htm" title="牲畜打疫苗完成的简报内容（牲畜注射疫苗简报）">牲畜打疫苗完成的简报内容（牲畜注射疫苗简报）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-1-node-share-links.htm" title="「4月1日」最高速度21.1M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「4月1日」最高速度21.1M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-87573.htm" title="宠物医院好评模板100字图片（宠物医院好评模版）">宠物医院好评模板100字图片（宠物医院好评模版）</a></li>
-                        <li class="py-2"><a href="/news/article-67133.htm" title="上海宠物领养救助站是真的吗（上海宠物领养机构）">上海宠物领养救助站是真的吗（上海宠物领养机构）</a></li>
+                        <li class="py-2"><a href="/news/article-65901.htm" title="青浦二中2020中考最低录取分数线（上海2020年青浦二中升学率）">青浦二中2020中考最低录取分数线（上海2020年青浦二中升学率）</a></li>
                     </ul>
     </div>
 </div>
@@ -267,7 +268,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">54</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">65</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
