--- a/about-us.htm
+++ b/about-us.htm
@@ -47,6 +47,7 @@
     <link rel="stylesheet" href="/assets/website/fonts/v2ray_node/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="/assets/website/css/v2ray_node/aos.css">
     <link rel="stylesheet" href="/assets/website/css/v2ray_node/style.css">
+    <link rel="stylesheet" href="/assets/website/css/G.css" />
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7H6DT73WHK"></script>
 <script>
@@ -123,16 +124,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-67777.htm" title="合肥宠物领养中心官网地址 合肥宠物领养中心官网地址查询">合肥宠物领养中心官网地址 合肥宠物领养中心官网地址查询</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-23-free-v2ray.htm" title="「3月23日」最高速度21M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「3月23日」最高速度21M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-95772.htm" title="成都市宠物狗领养平台官网电话（成都宠物狗领养吧）">成都市宠物狗领养平台官网电话（成都宠物狗领养吧）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-9-free-node-subscribe-links.htm" title="「4月9日」最高速度20M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「4月9日」最高速度20M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-96498.htm" title="南京农大动物医院有限责任公司（南京农业大学动物医学院地址）">南京农大动物医院有限责任公司（南京农业大学动物医学院地址）</a></li>
-                        <li class="py-2"><a href="/news/article-97962.htm" title="动物疫苗价格表图片高清大图大全 动物疫苗价格表图片高清大图大全集">动物疫苗价格表图片高清大图大全 动物疫苗价格表图片高清大图大全集</a></li>
-                        <li class="py-2"><a href="/news/article-84718.htm" title="1970年农历4月27日（1970年农历4月27日阳历是多少）">1970年农历4月27日（1970年农历4月27日阳历是多少）</a></li>
+                        <li class="py-2"><a href="/news/article-75031.htm" title="免费领养狗狗正规网站平台有哪些呢图片（免费领养狗狗）">免费领养狗狗正规网站平台有哪些呢图片（免费领养狗狗）</a></li>
+                        <li class="py-2"><a href="/news/article-70349.htm" title="宠物领养协议书范本模板图片下载 宠物领养协议书范本模板图片下载大全">宠物领养协议书范本模板图片下载 宠物领养协议书范本模板图片下载大全</a></li>
+                        <li class="py-2"><a href="/news/article-77071.htm" title="广州宠物市场搬去哪了（广州市十大宠物市场）">广州宠物市场搬去哪了（广州市十大宠物市场）</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-3-5-free-high-speed-nodes.htm" title="「3月5日」最高速度20.9M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「3月5日」最高速度20.9M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-67133.htm" title="上海宠物领养救助站是真的吗（上海宠物领养机构）">上海宠物领养救助站是真的吗（上海宠物领养机构）</a></li>
-                        <li class="py-2"><a href="/news/article-90510.htm" title="vue实现可以快进后退的跑马灯组件_vue.js">vue实现可以快进后退的跑马灯组件_vue.js</a></li>
+                        <li class="py-2"><a href="/news/article-76392.htm" title="北京宠物医院价格表（北京宠物医院价格表图片）">北京宠物医院价格表（北京宠物医院价格表图片）</a></li>
+                        <li class="py-2"><a href="/news/article-69064.htm" title="Quartz高可用定时任务快速上手">Quartz高可用定时任务快速上手</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-7-free-subscribe-node.htm" title="「3月7日」最高速度22.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「3月7日」最高速度22.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-23-free-v2ray.htm" title="「3月23日」最高速度21M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「3月23日」最高速度21M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-29-free-v2ray-subscribe.htm" title="「3月29日」最高速度18.2M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「3月29日」最高速度18.2M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-89060.htm" title="开宠物零食网店手续（开宠物食品店需要多少钱）">开宠物零食网店手续（开宠物食品店需要多少钱）</a></li>
                     </ul>
     </div>
 </div>
@@ -144,7 +145,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">54</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">65</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
