--- a/date/2025-03/page-2.htm
+++ b/date/2025-03/page-2.htm
@@ -47,6 +47,7 @@
     <link rel="stylesheet" href="/assets/website/fonts/v2ray_node/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="/assets/website/css/v2ray_node/aos.css">
     <link rel="stylesheet" href="/assets/website/css/v2ray_node/style.css">
+    <link rel="stylesheet" href="/assets/website/css/G.css" />
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7H6DT73WHK"></script>
 <script>
@@ -249,16 +250,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-4-10-free-node-subscribe-links.htm" title="「4月10日」最高速度19.5M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「4月10日」最高速度19.5M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-66501.htm" title="流光之城刘妍（流光之城结局）学到了吗，">流光之城刘妍（流光之城结局）学到了吗，</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-1-node-share-links.htm" title="「4月1日」最高速度21.1M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「4月1日」最高速度21.1M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-86867.htm" title="动物医院哪里好一点啊（动物医院大众点评）">动物医院哪里好一点啊（动物医院大众点评）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-10-free-node-subscribe-links.htm" title="「3月10日」最高速度18.6M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「3月10日」最高速度18.6M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-76391.htm" title="动物疫苗种类及类型分类图解（动物疫苗的种类）">动物疫苗种类及类型分类图解（动物疫苗的种类）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-21-free-node-subscribe-links.htm" title="「3月21日」最高速度20.2M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「3月21日」最高速度20.2M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-6-free-node-subscribe-links.htm" title="「4月6日」最高速度22.9M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「4月6日」最高速度22.9M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-2-node-share-links.htm" title="「4月2日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「4月2日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-17-free-subscribe-node.htm" title="「3月17日」最高速度21.3M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「3月17日」最高速度21.3M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-65900.htm" title="将Spring Boot 项目打包成Jar包并部署到Nginx服务器中">将Spring Boot 项目打包成Jar包并部署到Nginx服务器中</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-24-node-share-links.htm" title="「3月24日」最高速度21.9M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「3月24日」最高速度21.9M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-70348.htm" title="go微服务框架Kratos简单使用总结">go微服务框架Kratos简单使用总结</a></li>
+                        <li class="py-2"><a href="/news/article-96499.htm" title="动物医生执照的报考条件要求（动物医生职业资格证书）">动物医生执照的报考条件要求（动物医生职业资格证书）</a></li>
+                        <li class="py-2"><a href="/news/article-97962.htm" title="动物疫苗价格表图片高清大图大全 动物疫苗价格表图片高清大图大全集">动物疫苗价格表图片高清大图大全 动物疫苗价格表图片高清大图大全集</a></li>
+                        <li class="py-2"><a href="/news/article-86159.htm" title="DecimalFormat保留小数位">DecimalFormat保留小数位</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-15-clash-v2ray-ss-ssr.htm" title="「4月15日」最高速度18.1M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接">「4月15日」最高速度18.1M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-97958.htm" title="宠物猫一般多少钱一只?（宠物猫多少钱一只正常价）">宠物猫一般多少钱一只?（宠物猫多少钱一只正常价）</a></li>
+                        <li class="py-2"><a href="/news/article-85431.htm" title="适合女人小成本开店（适合女人小成本开店成本5万）">适合女人小成本开店（适合女人小成本开店成本5万）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-17-free-v2ray-subscribe.htm" title="「4月17日」最高速度22.5M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「4月17日」最高速度22.5M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -270,7 +271,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">54</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">65</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
