--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -47,6 +47,7 @@
     <link rel="stylesheet" href="/assets/website/fonts/v2ray_node/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="/assets/website/css/v2ray_node/aos.css">
     <link rel="stylesheet" href="/assets/website/css/v2ray_node/style.css">
+    <link rel="stylesheet" href="/assets/website/css/G.css" />
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7H6DT73WHK"></script>
 <script>
@@ -477,7 +478,7 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="http://xianyuwangluo.top/#/register?code=" data-type="Xianyu" data-code="j5kX2iZI" target="_blank"><b>闲鱼网络</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://xianyuwangluo.top/#/register?code=" data-type="Xianyu" data-code="j5kX2iZI" target="_blank"><b>闲鱼网络</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -526,7 +527,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="http://xianyuwangluo.top/#/register?code=" data-type="Xianyu" data-code="j5kX2iZI" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://xianyuwangluo.top/#/register?code=" data-type="Xianyu" data-code="j5kX2iZI" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -538,16 +539,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-95024.htm" title="宠物领养免费平台有哪些软件（宠物领养免费平台有哪些软件好）">宠物领养免费平台有哪些软件（宠物领养免费平台有哪些软件好）</a></li>
-                        <li class="py-2"><a href="/news/article-76392.htm" title="北京宠物医院价格表（北京宠物医院价格表图片）">北京宠物医院价格表（北京宠物医院价格表图片）</a></li>
+                        <li class="py-2"><a href="/news/article-73012.htm" title="VUE3开发问题总结(数据更新和页面显示问题)">VUE3开发问题总结(数据更新和页面显示问题)</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-14-free-subscribe-node.htm" title="「4月14日」最高速度19.2M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「4月14日」最高速度19.2M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-96499.htm" title="动物医生执照的报考条件要求（动物医生职业资格证书）">动物医生执照的报考条件要求（动物医生职业资格证书）</a></li>
+                        <li class="py-2"><a href="/news/article-98637.htm" title="1970年农历四月二十是什么星座（1970年阴历四月二十是什么星座）">1970年农历四月二十是什么星座（1970年阴历四月二十是什么星座）</a></li>
+                        <li class="py-2"><a href="/news/article-85430.htm" title="restTemplate配置及使用">restTemplate配置及使用</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-8-free-high-speed-nodes.htm" title="「4月8日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接">「4月8日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-75695.htm" title="合肥哪里有领养猫狗的地方 合肥有领养猫的地方吗">合肥哪里有领养猫狗的地方 合肥有领养猫的地方吗</a></li>
+                        <li class="py-2"><a href="/news/article-90510.htm" title="vue实现可以快进后退的跑马灯组件_vue.js">vue实现可以快进后退的跑马灯组件_vue.js</a></li>
                         <li class="py-2"><a href="/news/article-86867.htm" title="动物医院哪里好一点啊（动物医院大众点评）">动物医院哪里好一点啊（动物医院大众点评）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-22-node-share.htm" title="「3月22日」最高速度21M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「3月22日」最高速度21M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-18-node-share-links.htm" title="「4月18日」最高速度21.3M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「4月18日」最高速度21.3M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-95773.htm" title="猫三联要隔多久打一针（猫三联要隔多久打一针才有效）">猫三联要隔多久打一针（猫三联要隔多久打一针才有效）</a></li>
-                        <li class="py-2"><a href="/news/article-67133.htm" title="上海宠物领养救助站是真的吗（上海宠物领养机构）">上海宠物领养救助站是真的吗（上海宠物领养机构）</a></li>
-                        <li class="py-2"><a href="/news/article-73671.htm" title="宠物领养论坛网站（宠物领养信息发布）">宠物领养论坛网站（宠物领养信息发布）</a></li>
-                        <li class="py-2"><a href="/news/article-72343.htm" title="element中el-cascader的使用">element中el-cascader的使用</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-5-node-share-links.htm" title="「4月5日」最高速度22M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「4月5日」最高速度22M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-65900.htm" title="将Spring Boot 项目打包成Jar包并部署到Nginx服务器中">将Spring Boot 项目打包成Jar包并部署到Nginx服务器中</a></li>
                     </ul>
     </div>
 </div>
@@ -559,7 +560,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">54</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">65</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
